Updated to webpack 4

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Ana Arribasplata</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="./../images/favicon1.ico" rel="icon" sizes="16x16" type="img/.ico">
+    <link href="../src/images/favicon1.ico" rel="icon" sizes="16x16" type="img/.ico">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBizrFcjeueuIq774fmA-vaertz5T97ZgQ"
     async defer></script>
     <script type="text/javascript"
