Made some styling changes. Works on desktop

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js">
     </script>
 
-<link rel="shortcut icon" href="https://arrb.github.io/favicon1.ico"></head>
+<link rel="shortcut icon" href="http://localhost:3000/favicon1.ico"></head>
 <body>
 <div id="root"></div>
-<script type="text/javascript" src="https://arrb.github.io/bundle.js"></script></body>
+<script type="text/javascript" src="http://localhost:3000/bundle.js"></script></body>
 </html>
